# tach-core

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml  run_gauntlet.sh
docs/architecture/: phase2_loader.md
rust_tests/: cli_integration.rs  discovery_integration.rs  implementation_tests.rs  loader_integration.rs  physics_check.rs  protocol_integration.rs  resolver_integration.rs  snapshot_integration.rs
src/: config.rs  debugger.rs  discovery.rs  environment.rs  isolation.rs  junit.rs  lib.rs  lifecycle.rs  loader.rs  logcapture.rs  main.rs  protocol.rs  reporter.rs  resolver.rs  scheduler.rs  signals.rs  snapshot.rs  tach_harness.py  watch.rs  zygote.rs
tests/: test_dummy.py
tests/benchmark/: test_loader_perf.py
tests/benchmark/modules/: __init__.py  module_0.py  module_1.py  module_10.py  module_11.py  module_12.py  module_13.py  module_14.py  module_15.py  module_16.py  module_17.py  module_18.py  module_19.py  module_2.py  module_20.py  module_21.py  module_22.py  module_23.py  module_24.py  module_25.py  module_26.py  module_27.py  module_28.py  module_29.py  module_3.py  module_30.py  module_31.py  module_32.py  module_33.py  module_34.py  module_35.py  module_36.py  module_37.py  module_38.py  module_39.py  module_4.py  module_40.py  module_41.py  module_42.py  module_43.py  (+11 more)
tests/crash_test/: test_crash_suite.py
tests/django_project/: __init__.py  models.py  settings.py  test_django_iso.py
tests/dummy_project/: conftest.py  test_async.py  test_bad_cycle.py  test_bad_syntax.py  test_crash.py  test_fail_assert.py  test_fixture_verify.py  test_io_conflict.py  test_local_override.py  test_missing.py  test_parallel.py  test_port_conflict.py  test_print_capture.py  test_simple.py  test_stress.py
tests/env_test/: __init__.py  test_env.py  test_random.py
tests/fd_leak_test/: test_thousand.py
tests/gauntlet/: test_fs_destruction.py  test_log_flood.py  test_port_storm.py  test_segfault.py  test_watch_stress.py
tests/gauntlet_phase1/: test_memory_reset.py  test_worker_recycling.py
tests/gauntlet_phase2/: test_complex_imports.py  test_loader_e2e.py  test_loader_edge_cases.py  test_loader_regression.py  test_loader_stress.py
tests/gauntlet_phase2/fixtures/: __init__.py  hello.py
tests/gauntlet_phase2/pkg/: __init__.py  sibling.py  sub.py
tests/gauntlet_phase3/: __init__.py  test_integration.py
tests/manual/: test_debug.py
tests/parallel_test/: test_sleep.py
