[package]
name = "tach-core"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.23", features = ["auto-initialize"] }
anyhow = "1.0"
nix = { version = "0.29", features = ["process", "signal", "uio", "socket", "fs"] }

# Discovery Stack
rustpython-parser = "0.4"
rustpython-ast = "0.4"
ignore = "0.4"
rayon = "1.10"

# Scheduler Stack
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
num_cpus = "1.16"
libc = "0.2"
