[package]
name = "tach-core"
version = "0.1.0"
edition = "2021"

# Lib for integration tests, bin for actual CLI
[lib]
name = "tach_core"
path = "src/lib.rs"

[[bin]]
name = "tach-core"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.23", features = ["auto-initialize"] }
anyhow = "1.0"
nix = { version = "0.29", features = ["process", "signal", "uio", "socket", "fs", "mount", "sched"] }

# Discovery Stack
rustpython-parser = "0.4"
rustpython-ast = "0.4"
ignore = "0.4"
rayon = "1.10"

# Scheduler Stack
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
num_cpus = "1.16"
libc = "0.2"

# Config Loading
toml = "0.8"

[dev-dependencies]
tempfile = "3"
bincode = "1.3"
wait-timeout = "0.2"

# Integration tests (separate from Python test fixtures in tests/)
[[test]]
name = "discovery_integration"
path = "rust_tests/discovery_integration.rs"

[[test]]
name = "protocol_integration"
path = "rust_tests/protocol_integration.rs"

[[test]]
name = "resolver_integration"
path = "rust_tests/resolver_integration.rs"

[[test]]
name = "implementation_tests"
path = "rust_tests/implementation_tests.rs"
