[package]
name = "tach-core"
version = "0.1.0"
edition = "2021"

# Lib for integration tests, bin for actual CLI
[lib]
name = "tach_core"
path = "src/lib.rs"

[[bin]]
name = "tach-core"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.23", features = ["auto-initialize"] }
anyhow = "1.0"
dashmap = "5.5"
nix = { version = "0.29", features = ["process", "signal", "uio", "socket", "fs", "mount", "sched", "term"] }

# Discovery Stack
rustpython-parser = "0.4"
rustpython-ast = "0.4"
ignore = "0.4"
walkdir = "2.4"
rayon = "1.10"

# Scheduler Stack
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
num_cpus = "1.16"
libc = "0.2"

# Phase 1.2: Snapshot/Reset (Hypervisor Architecture)
userfaultfd = "0.8"
uuid = { version = "1.0", features = ["v4"] }

# Config Loading
toml = "0.8"

# Lifecycle & Signal Handling (Phase 4.2)
signal-hook = "0.3"

# CLI & JSON Protocol (Phase 5.1)
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1.0"

# JUnit XML (Phase 5.2)
quick-xml = { version = "0.31", features = ["serialize"] }

# Watch Mode (Phase 5.3)
notify = "6.1"
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3"
bincode = "1.3"
wait-timeout = "0.2"

# Integration tests (separate from Python test fixtures in tests/)
[[test]]
name = "discovery_integration"
path = "rust_tests/discovery_integration.rs"

[[test]]
name = "protocol_integration"
path = "rust_tests/protocol_integration.rs"

[[test]]
name = "resolver_integration"
path = "rust_tests/resolver_integration.rs"

[[test]]
name = "implementation_tests"
path = "rust_tests/implementation_tests.rs"

[[test]]
name = "physics_check"
path = "rust_tests/physics_check.rs"

[[test]]
name = "snapshot_integration"
path = "rust_tests/snapshot_integration.rs"

[[test]]
name = "loader_integration"
path = "rust_tests/loader_integration.rs"

